--- a/.github/workflows/build_run.yaml
+++ b/.github/workflows/build_run.yaml
@@ -1,7 +1,7 @@
 name: Build,Push and Run on AWS 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
 jobs:
   build-and-push:
     name: Build and Push to ECR
@@ -25,8 +25,8 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: lesson-086
-        IMAGE_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
+        ECR_REPOSITORY: covid_19
+        IMAGE_TAG: latest
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
