--- a/.github/workflows/build_run.yaml
+++ b/.github/workflows/build_run.yaml
@@ -28,5 +28,5 @@ jobs:
         ECR_REPOSITORY: covid_19
         IMAGE_TAG: latest
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker build . -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
