--- a/DockerFile
+++ b/DockerFile
@@ -2,30 +2,27 @@ ARG UBUNTU_VERSION=18.04
 
 FROM ubuntu:${UBUNTU_VERSION} as base
 
-RUN apt-get update && apt-get install -y curl
+# RUN apt-get update && apt-get install -y curl
 
-# See http://bugs.python.org/issue19846
 ENV LANG C.UTF-8
 
 RUN apt-get update && apt-get install -y \
     python3 \
     python3-pip
 
-RUN python3 -m pip --no-cache-dir install --upgrade \
-    "pip<20.3" \
-    setuptools
+# RUN python3 -m pip --no-cache-dir install --upgrade \
+#     "pip<20.3" \
+#     setuptools
 
 # Some TF tools expect a "python" binary
 RUN ln -s $(which python3) /usr/local/bin/python
 
 ENV PYTHONUNBUFFERED True
 
-WORKDIR /app
+WORKDIR /app    
 
-ADD 'app/requirements.txt' .
+COPY . .
 
-RUN pip3 install -r requirements.txt
-
-COPY "app/" .
+RUN pip3 install -r app/requirements.txt
 
 CMD [ "python" ,"app.py"]
